saving received data to filesystem