@@ -1,6 +1,5 @@
 package net.sparkworks.ac3.logger;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
@@ -9,8 +8,9 @@ import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.net.InetSocketAddress;
-import java.util.HashMap;
-import java.util.Map;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Optional;
 
 
@@ -19,11 +19,12 @@ public class HttpFilesRequestLoggerServer {
     private static final Logger logger = LoggerFactory.getLogger(HttpFilesRequestLoggerServer.class);
 
     static final String HTTP_PORT = "HTTP_SERVER_PORT";
-    static ObjectMapper objectMapper = new ObjectMapper();
-    static Map<String, String> last = new HashMap<>();
-    private static final String FILES_DIR = System.getenv("FILES_DIR");
+    private static String FILES_DIR = System.getenv("FILES_DIR");
 
     public static void main(String[] args) {
+        if (FILES_DIR == null) {
+            FILES_DIR = "files";
+        }
         int port = Integer.parseInt(Optional.ofNullable(System.getenv(HTTP_PORT)).orElse("4000"));
         try {
             var server = HttpServer.create(new InetSocketAddress(port), 0);
@@ -41,11 +42,13 @@ public class HttpFilesRequestLoggerServer {
 
         @Override
         public void handle(HttpExchange exchange) throws IOException {
-            String bodyStr = new String(exchange.getRequestBody().readAllBytes());
-            logger.info("Incoming message : {}", bodyStr);
-
-            //need to store data to FILES_DIR
-
+            byte[] bytes = exchange.getRequestBody().readAllBytes();
+            try {
+                Path path = Paths.get("%s/%d.data".formatted(FILES_DIR, System.currentTimeMillis()));
+                Files.write(path, bytes);
+            } catch (Exception e) {
+                logger.error(e.getMessage(), e);
+            }
             exchange.sendResponseHeaders(200, -1);
         }
     }
